services/beeformed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beeformed
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: beeformed
  template:
    metadata:
      labels:
        app.kubernetes.io/name: beeformed
    spec:
      containers:
        - name: beeformed
          image: ghcr.io/login-linjeforeningen-for-it/beeformed/frontend
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 100
            runAsGroup: 101
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beeformed-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: beeformed-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: beeformed-api
    spec:
      containers:
        - name: beeformed-api
          image: ghcr.io/login-linjeforeningen-for-it/beeformed/api
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /api/ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 5
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 100
            runAsGroup: 101
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
